下拉刷新，打包等

--- a/app/src/main/assets/www.xiaoniu88.com/weixin/resources/weixin/aboutus_new.html
+++ b/app/src/main/assets/www.xiaoniu88.com/weixin/resources/weixin/aboutus_new.html
@@ -66,7 +66,7 @@
     <a href="/weixin/index" class="foot_nav nav_index"><i></i><em>首页</em></a>
     </span>
     <span class="foot_nav">
-    <a href="list.html#axn" class="foot_nav nav_invest"><i></i><em>我要投资</em></a>
+    <a href="error.html#axn" class="foot_nav nav_invest"><i></i><em>我要投资</em></a>
     </span>
     <span class="foot_nav">
     <a href="/weixin/account/send/index" class="foot_nav nav_account"><i></i><em>我的账户</em></a>
